--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
         "@fontsource/roboto": "^5.1.0",
         "@mui/icons-material": "^6.1.7",
         "@mui/material": "^6.1.7",
+        "@reduxjs/toolkit": "^2.3.0",
+        "axios": "^1.7.7",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-router-dom": "^6.28.0"
+        "react-redux": "^9.1.2",
+        "react-router-dom": "^6.28.0",
+        "redux": "^5.0.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.13.0",
