--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@mui/material": "^6.1.7",
         "@reduxjs/toolkit": "^2.3.0",
         "axios": "^1.7.7",
+        "mui-sonner": "^1.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-redux": "^9.1.2",
